media queries set up

--- a/index.html
+++ b/index.html
@@ -190,16 +190,16 @@
 		</div>
 	</div>
 
-<!-- Adventages -->
-	<div class="adventages">
+<!-- Advantages -->
+	<div class="advantages">
 		<div class="section-title">
 			<div class="container">
-				<h2>Lorem Impus</h2>
+				<h2>Advantages</h2>
 				<p>Debitis tenetur quis aliquam, sunt itaque! </p>
 			</div>
 		</div>
-	</div>
-	<div class="adventages-content">
+	
+	<div class="advantages-content">
 		<div class="container">
 			<div class="single-col">
 				<span><i class="fa fa-search" aria-hidden="true"></i></span>
@@ -244,6 +244,7 @@
 				</div>
 			</div>
 		</div>
+	</div>
 	</div>
 	<div class="statistics">
 		<div class="container">
@@ -369,7 +370,7 @@
 		<div class="footer-main">
 			<div class="container">
 				<div class="single-col">
-					<h3>Lorem</h3>
+					<h3>Lorem 1 Footer</h3>
 					<p>Dolor sit amet, consectetur adipisicing elit. Consequatur voluptate, totam dolores iusto quia, deserunt.</p>
 					<ul class="footer-social">
 						<li><a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
@@ -382,7 +383,7 @@
 				</div>
 
 				<div class="single-col our-blog">
-						<h3>Our blog</h3>
+						<h3>Lorem 2 Footer</h3>
 						<ul>
 							<li>
 								<h4><a href="">Uis consequat augue dui nonm non.</a></h4>
@@ -400,7 +401,7 @@
 					</div>
 
 					<div class="single-col footer-gallery">
-						<h3>Galeria</h3>
+						<h3>Lorem 3 Footer</h3>
 						<ul>
 							<li><a href="#"><img src="img/galeria/1.jpg" alt=""></a></li>
 							<li><a href="#"><img src="img/galeria/2.jpg" alt=""></a></li>
@@ -412,7 +413,7 @@
 					</div>
 
 					<div class="single-col more-links">
-						<h3>Linki</h3>
+						<h3>Lorem 4 Footer</h3>
 						<ul>
 							<li><a href="#">Strefa Kursóww</a></li>
 							<li><a href="#">Facebook</a></li>
