--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<!-- bxSlider CSS file -->
+	<link href="css/jquery.bxslider.css" rel="stylesheet" />
 	<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
 	<!-- Moblie menu -->
 	<script src="js/jquery.slicknav.min.js"></script>
+	<!-- bxSlider Javascript file -->
+	<script src="js/jquery.bxslider.min.js"></script>
 </head>
 <body>
 	<div id="main-container">
@@ -40,7 +44,7 @@
 
 		<!-- Top Slider -->
 		<div class="top-slider">
-			<ul class="bx-slider" id="main-slider">
+			<ul class="bxslider" id="main-slider">
 				<li>
 					<div class="main-slide-1">
 						<div class="container">
@@ -48,31 +52,31 @@
 								<h1>Performance and safety refined</h1>
 								<p>Model S is designed from the ground up to be the safest, most exhilarating saloon on the road. With unparalleled performance delivered through Tesla’s unique, all-electric powertrain, Model S accelerates from 0 to 60 mph in as little as 2.8 seconds. Model S comes with Autopilot capabilities designed to make your highway driving not only safer, but stress free.</p>
 								<a href="#">More...</a>
-								<img src="img/Model-X.jpg" alt="">
+								<img src="img/600-Model-X.jpg" alt="">
 							</div>
 						</div>
 					</div>
 				</li>
 				<li>
-					<div class="main-slide-1">
+					<div class="main-slide-2">
 						<div class="container">
 							<div class="main-slider-container">
 								<h1>Meet Model X</h1>
 								<p>Model X is the safest, fastest and most capable sport utility vehicle in history. With all-wheel drive and a 90 kWh battery providing 303 miles of range, Model X has ample seating for seven adults and all of their gear. And it’s ludicrously fast, accelerating from zero to 60 miles per hour in as quick as 3.2 seconds.</p>
 								<a href="#">More...</a>
-								<img src="img/Model-S.jpg" alt="">
+								<img src="img/600-Model-S.jpg" alt="">
 							</div>
 						</div>
 					</div>
 				</li>
 				<li>
-					<div class="main-slide-1">
+					<div class="main-slide-3">
 						<div class="container">
 							<div class="main-slider-container">
 								<h1>Accelerating Sustainable Transport</h1>
 								<p>Model 3 combines real world range, performance, safety and spaciousness into a premium sedan that only Tesla can build. Our most affordable car yet, Model 3 achieves 215 miles of range per charge while starting at only 35,000 USD before incentives. Model 3 is designed to attain the highest safety ratings in every category.</p>
 								<a href="#">More...</a>
-								<img src="img/Model-3.jpg" alt="">
+								<img src="img/600-Model-3.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -348,7 +352,7 @@
 				<p>Debitis tenetur quis aliquam, sunt itaque! </p>
 			</div>
 			<div class="opinions-content">
-				<ul class="bx-slider" id="opinions-slider">
+				<ul class="bxslider" id="opinions-slider">
 					<li>
 						<p>Dolor sit amet, consectetur adipisicing elit. Consequatur voluptate, totam dolores iusto quia, deserunt.</p>
 						<h3>Lorem Impus</h3>
@@ -443,6 +447,14 @@
 			prependTo: '#mobile-menu',
 			label: ''
 		});
+
+	// Main slider
+	$('#main-slider').bxSlider({
+		mode: 'fade',
+		auto: true,
+		controls: true,
+		pager: false
+	});
 	});
 </script>
 </script>
