--- a/index.html
+++ b/index.html
@@ -137,46 +137,90 @@
 				<div id="portfolio-carousel" class="owl-carousel">
 					
 					<div class="portfolio-item">
-						<img src="img/owl_slider/os1.jpg" alt="">
+						<img src="img/owl_slider/os2.jpg" alt="">
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-inner">
-								<h3>Lorem Impus 1</h3>
-								<p>Perferendis similique a.</p>
-								<a href="#" class="portfolio-link-left"><i class="fa fa-search" aria-hidden="true"></i></a>
-								<a href="#" class="portfolio-link-left"><i class="fa fa-file-image-o" aria-hidden="true"></i></a>
+								<h3>Lorem ipsum</h3>
+								<p>Dolor sit amet</p>
+								<a href="" class="portfolio-link-left"><i class="fa fa-search"></i></a>
+								<a href="" class="portfolio-link-right"><i class="fa fa-file-image-o"></i></a>
 							</div>
 						</div>
 					</div>
 					<div class="portfolio-item">
-						<img src="img/owl_slider/os1.jpg" alt="">
+						<img src="img/owl_slider/os2.jpg" alt="">
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-inner">
-								<h3>Lorem Impus 1</h3>
-								<p>Perferendis similique a.</p>
-								<a href="#" class="portfolio-link-left"><i class="fa fa-search" aria-hidden="true"></i></a>
-								<a href="#" class="portfolio-link-left"><i class="fa fa-file-image-o" aria-hidden="true"></i></a>
+								<h3>Lorem ipsum</h3>
+								<p>Dolor sit amet</p>
+								<a href="" class="portfolio-link-left"><i class="fa fa-search"></i></a>
+								<a href="" class="portfolio-link-right"><i class="fa fa-file-image-o"></i></a>
 							</div>
 						</div>
 					</div>
 					<div class="portfolio-item">
-						<img src="img/owl_slider/os1.jpg" alt="">
+						<img src="img/owl_slider/os2.jpg" alt="">
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-inner">
-								<h3>Lorem Impus 1</h3>
-								<p>Perferendis similique a.</p>
-								<a href="#" class="portfolio-link-left"><i class="fa fa-search" aria-hidden="true"></i></a>
-								<a href="#" class="portfolio-link-left"><i class="fa fa-file-image-o" aria-hidden="true"></i></a>
+								<h3>Lorem ipsum</h3>
+								<p>Dolor sit amet</p>
+								<a href="" class="portfolio-link-left"><i class="fa fa-search"></i></a>
+								<a href="" class="portfolio-link-right"><i class="fa fa-file-image-o"></i></a>
 							</div>
 						</div>
 					</div>
 					<div class="portfolio-item">
-						<img src="img/owl_slider/os1.jpg" alt="">
+						<img src="img/owl_slider/os2.jpg" alt="">
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-inner">
-								<h3>Lorem Impus 1</h3>
-								<p>Perferendis similique a.</p>
-								<a href="#" class="portfolio-link-left"><i class="fa fa-search" aria-hidden="true"></i></a>
-								<a href="#" class="portfolio-link-left"><i class="fa fa-file-image-o" aria-hidden="true"></i></a>
+								<h3>Lorem ipsum</h3>
+								<p>Dolor sit amet</p>
+								<a href="" class="portfolio-link-left"><i class="fa fa-search"></i></a>
+								<a href="" class="portfolio-link-right"><i class="fa fa-file-image-o"></i></a>
+							</div>
+						</div>
+					</div>
+					<div class="portfolio-item">
+						<img src="img/owl_slider/os2.jpg" alt="">
+						<div class="portfolio-hover">
+							<div class="portfolio-hover-inner">
+								<h3>Lorem ipsum</h3>
+								<p>Dolor sit amet</p>
+								<a href="" class="portfolio-link-left"><i class="fa fa-search"></i></a>
+								<a href="" class="portfolio-link-right"><i class="fa fa-file-image-o"></i></a>
+							</div>
+						</div>
+					</div>
+					<div class="portfolio-item">
+						<img src="img/owl_slider/os2.jpg" alt="">
+						<div class="portfolio-hover">
+							<div class="portfolio-hover-inner">
+								<h3>Lorem ipsum</h3>
+								<p>Dolor sit amet</p>
+								<a href="" class="portfolio-link-left"><i class="fa fa-search"></i></a>
+								<a href="" class="portfolio-link-right"><i class="fa fa-file-image-o"></i></a>
+							</div>
+						</div>
+					</div>
+					<div class="portfolio-item">
+						<img src="img/owl_slider/os2.jpg" alt="">
+						<div class="portfolio-hover">
+							<div class="portfolio-hover-inner">
+								<h3>Lorem ipsum</h3>
+								<p>Dolor sit amet</p>
+								<a href="" class="portfolio-link-left"><i class="fa fa-search"></i></a>
+								<a href="" class="portfolio-link-right"><i class="fa fa-file-image-o"></i></a>
+							</div>
+						</div>
+					</div>
+					<div class="portfolio-item">
+						<img src="img/owl_slider/os2.jpg" alt="">
+						<div class="portfolio-hover">
+							<div class="portfolio-hover-inner">
+								<h3>Lorem ipsum</h3>
+								<p>Dolor sit amet</p>
+								<a href="" class="portfolio-link-left"><i class="fa fa-search"></i></a>
+								<a href="" class="portfolio-link-right"><i class="fa fa-file-image-o"></i></a>
 							</div>
 						</div>
 					</div>
