--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 	<script src="js/imagesloaded.pkgd.min.js"></script>
 	<!-- Owl Carousel -->
 	<script src="owl-carousel/owl.carousel.min.js"></script>
+	<!-- Count to -->
+	<script src="js/jquery.countTo.js"></script>
 </head>
 <body>
 	<div id="main-container">
@@ -232,21 +234,23 @@
 
 	<!-- Video -->
 	<div class="section-video">
-		<div id="movie">
-			<div class="vidoe-line">
-				<h2>Lorem Impus</h2>
-				<a href="#" class="button">See on YouTube</a>
+			<div id="movie" style="position:absolute">
 			</div>
-			<div class="player">
-				
+			<div class="video-line">
+				<div class="container" data-animate="bounceIn"> 
+					<h2>Lorem ipsum dolor sit</h2>
+					<a href="#" class="button">See more</a>
+				</div>
+			</div>
+			<div class="player" data-property="{videoURL:'V6_85cSOIcE',containment:'#movie',showControls:false,startAt:0,mute:true,autoPlay:true,loop:true,opacity:1}">
 			</div>
 		</div>
-	</div>
 
 	<div class="section-video-text">
 		<div class="container">
-			<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </h2>
-			<a href="#" class="button">See on YouTube</a>
+			<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+				<a href="#" class="button">See more</a>
+			</h2>
 		</div>
 	</div>
 
@@ -306,30 +310,31 @@
 		</div>
 	</div>
 	</div>
+
 	<div class="statistics">
 		<div class="container">
 			<div class="statistics-single-item single-col">
 				<div class="statistics-content">
-					<h3></h3>
-					<p>Satisfied customers</p>
+					<h3><span class="timer" data-from="0" data-to="100" data-speed="2000"></span></h3>
+					<p>Statistics 1</p>
 				</div>
 			</div>
 			<div class="statistics-single-item single-col">
 				<div class="statistics-content">
-					<h3></h3>
-					<p>Satisfied customers</p>
+					<h3><span class="timer" data-from="100" data-to="200" data-speed="2000"></span></h3>
+					<p>Statistics 2</p>
 				</div>
 			</div>
 			<div class="statistics-single-item single-col">
 				<div class="statistics-content">
-					<h3></h3>
-					<p>Satisfied customers</p>
+					<h3><span class="timer" data-from="100" data-to="300" data-speed="2000"></span></h3>
+					<p>Statistics 3</p>
 				</div>
 			</div>
 			<div class="statistics-single-item single-col">
 				<div class="statistics-content">
-					<h3></h3>
-					<p>Satisfied customers</p>
+					<h3><span class="timer" data-from="0" data-to="500" data-speed="2000"></span></h3>
+					<p>Statistics 4</p>
 				</div>
 			</div>
 		</div>
@@ -498,8 +503,11 @@
 		$('#main-menu').slicknav({
 			prependTo: '#attach-mobile-menu',
 			label: ''
-		});		
+		});
+		/* count to */
+		$('.timer').countTo();		
 	});
+
 	$('#main-container').imagesLoaded(function(){
 		/* glowny slider */
 		$('#main-slider').bxSlider({
