--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Tesla</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Economica:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<!-- bxSlider CSS file -->
@@ -238,27 +239,7 @@
 		</div>
 	</div>
 
-	<!-- Video -->
-	<div class="section-video">
-			<div id="movie" style="position:absolute">
-			</div>
-			<div class="video-line">
-				<div class="container" data-animate="bounceIn"> 
-					<h2>Lorem ipsum dolor sit</h2>
-					<a href="#" class="button">See more</a>
-				</div>
-			</div>
-			<div class="player" data-property="{videoURL:'j5LQ6YPGzro',containment:'#movie',showControls:false,startAt:0,mute:true,autoPlay:true,loop:true,opacity:1}">
-			</div>
-		</div>
-
-	<div class="section-video-text">
-		<div class="container">
-			<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-				<a href="#" class="button">See more</a>
-			</h2>
-		</div>
-	</div>
+	
 
 <!-- Advantages -->
 	<div class="advantages">
@@ -355,19 +336,20 @@
 		</div>
 	</div>
 
+<!-- Our Team -->
 	<div class="our-team">
 		<div class="container">
 			<div class="section-title">
-				<h2>Lorem Impus</h2>
+				<h2>Our team</h2>
 				<p>Debitis tenetur quis aliquam, sunt itaque! </p>
 			</div>
 			<div class="team-members">
 				<div class="team-member single-col">
-					<img src="img/team_1.jpg" alt="">
+					<img src="img/businessman-1.jpg" alt="">
 					<div>
 						<h3>Lorem Ipsum</h3>
 						<Span> Dolor sit </Span>
-						<p>amet, consectetur adipisicing elit. Expedita in exercitationem ipsum soluta, rerum temporibus blanditiis, velit voluptates earum. 
+						<p>met, consectetur adipisicing elit. Expedita in exercitationem ipsum soluta, rerum temporibus blanditiis, velit voluptates earum. 
 						</p>
 						<ul class="members-social">
 							<li><a href=""><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
@@ -377,11 +359,11 @@
 					</div>
 				</div>
 				<div class="team-member single-col">
-					<img src="img/team_1.jpg" alt="">
+					<img src="img/businessman-2.jpg" alt="">
 					<div>
 						<h3>Lorem Ipsum</h3>
 						<Span> Dolor sit </Span>
-						<p>amet, consectetur adipisicing elit. Expedita in exercitationem ipsum soluta, rerum temporibus blanditiis, velit voluptates earum. 
+						<p>Amet, consectetur adipisicing elit. Expedita in exercitationem ipsum soluta, rerum temporibus blanditiis, velit voluptates earum. 
 						</p>
 						<ul class="members-social">
 							<li><a href=""><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
@@ -391,11 +373,11 @@
 					</div>
 				</div>
 				<div class="team-member single-col">
-					<img src="img/team_1.jpg" alt="">
+					<img src="img/businessman-3.jpg" alt="">
 					<div>
 						<h3>Lorem Ipsum</h3>
 						<Span> Dolor sit </Span>
-						<p>amet, consectetur adipisicing elit. Expedita in exercitationem ipsum soluta, rerum temporibus blanditiis, velit voluptates earum. 
+						<p>Amet, consectetur adipisicing elit. Expedita in exercitationem ipsum soluta, rerum temporibus blanditiis, velit voluptates earum. 
 						</p>
 						<ul class="members-social">
 							<li><a href=""><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
@@ -404,9 +386,37 @@
 						</ul>
 					</div>
 				</div>
+				<div class="team-member single-col">
+					<img src="img/businessman-4.jpg" alt="">
+					<div>
+						<h3>Lorem Ipsum</h3>
+						<Span> Dolor sit </Span>
+						<p>Amet, consectetur adipisicing elit. Expedita in exercitationem ipsum soluta, rerum temporibus blanditiis, velit voluptates earum. 
+						</p>
+						<ul class="members-social">
+							<li><a href=""><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
+							<li><a href=""><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+							<li><a href=""><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+						</ul>
+					</div>
+				</div>
+
 			</div>
 		</div>
 	</div>
+
+	<div class="section-video">
+			<div id="movie" style="position:absolute">
+			</div>
+			<div class="video-line">
+				<div class="container" data-animate="bounceIn"> 
+					<h2>Video</h2>
+					<a href="#" class="button">See more</a>
+				</div>
+			</div>
+			<div class="player" data-property="{videoURL:'Q4VGQPk2Dl8',containment:'#movie',showControls:false,startAt:0,mute:true,autoPlay:true,loop:true,opacity:1}">
+			</div>
+		</div>
 
 	<footer>
 		<div class="footer-main">
@@ -491,8 +501,7 @@
 		});
 		/* count to */
 		$('.timer').countTo();
-		/* YTPlayer */
-		$('.player').YTPlayer();		
+			
 	});
 
 	/* Viewport Checker */
