Done, need testing on different devices

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 						</div>
 						<div class="main-menu-content">
 							<ul id="main-menu">
-								<li><a href="#" class="menu-link-active">Facts</a></li>
-								<li><a href="#">Model-S</a></li>
-								<li><a href="#">Model-X</a></li>
-								<li><a href="#">Model-3</a></li>
-								<li><a href="#">Advantages</a></li>
-								<li><a href="#">Meet Us</a></li>
+								<li><a href="#facts" class="menu-link-active">Facts</a></li>
+								<li><a href="#model-s">Model-S</a></li>
+								<li><a href="#model-x">Model-X</a></li>
+								<li><a href="#model-3">Model-3</a></li>
+								<li><a href="#portfolio">Advantages</a></li>
+								<li><a href="#our-team">Meet Us</a></li>
 							</ul>
 						</div>
 						<div id="mobile-menu">	
@@ -569,6 +569,6 @@
 		});
 	});
 </script>
-</script>
+<script src="js/navigation-scrolling.js"></script>
 </body> 
 </html>
